src/test/deca/syntax/valid/provided/1classtest.deca
class HH {
int l ;
int b = 2;}
