src/test/deca/syntax/invalid/attribution_invalide.deca

//Erreur : valeur invalide

{
    1=2 ;
}